--- a/res/values/elytra_strings.xml
+++ b/res/values/elytra_strings.xml
@@ -26,4 +26,6 @@
     <string name="maintainer">Maintainer</string>
     <string name="elytra_maintainer">Unofficial Maintainer</string>
 
+    <!-- App details: open play store link if app is user installed -->
+    <string name="app_play_store">Google Play</string>
 </resources>
