--- a/res/values/elytra_strings.xml
+++ b/res/values/elytra_strings.xml
@@ -42,4 +42,7 @@
     <string name="elytra_version">elytraOS version</string>
     <string name="elytra_version_default">Unknown</string>
     <string name="build_date">Build date</string>
+
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
 </resources>
