Settings: Add Build date entry to Firmware version window
Change-Id: I8d4c6869f8dfa34a96567bec18f9f8276b66a64e
Signed-off-by: Saikiran <bjsaikiran@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/values/elytra_strings.xml
+++ b/res/values/elytra_strings.xml
@@ -41,4 +41,5 @@
     <!-- elytraOS version -->
     <string name="elytra_version">elytraOS version</string>
     <string name="elytra_version_default">Unknown</string>
+    <string name="build_date">Build date</string>
 </resources>
