Settings: Add elytraOS Version to FirmwareVersion
Change-Id: I4acf834442712954f8e9db15370bffafd4547174
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/values/elytra_strings.xml
+++ b/res/values/elytra_strings.xml
@@ -37,4 +37,8 @@
     <string name="selinux_status_disabled">Disabled</string>
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
+
+    <!-- elytraOS version -->
+    <string name="elytra_version">elytraOS version</string>
+    <string name="elytra_version_default">Unknown</string>
 </resources>
