--- a/res/values/elytra_strings.xml
+++ b/res/values/elytra_strings.xml
@@ -22,4 +22,7 @@
     <string name="three_finger_gesture">Swipe to screenshot</string>
     <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
 
+    <!-- elytraOS maintainer -->
+    <string name="maintainer">Maintainer</string>
+
 </resources>
