Settings: Switch to string overlay for maintainer string
- Define following overlay in your device tree
    <string name="elytra_maintainer"></string>

Signed-off-by: Jackeagle <jackeagle102@gmail.com>
Change-Id: I65ad87ee20547320c97f1f0261d988307744b89f
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/values/elytra_strings.xml
+++ b/res/values/elytra_strings.xml
@@ -24,5 +24,6 @@
 
     <!-- elytraOS maintainer -->
     <string name="maintainer">Maintainer</string>
+    <string name="elytra_maintainer">Unofficial Maintainer</string>
 
 </resources>
